--- a/FinalProject/FinalProject/app/src/main/res/layout/activity_edit_profile.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/activity_edit_profile.xml
@@ -12,14 +12,15 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:src="@drawable/ic_person">
     </de.hdodenhof.circleimageview.CircleImageView>
 
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Lisa Mohiar"
+        android:hint="Name here..."
         android:textAlignment="center"
         android:textSize="25sp"
         android:textColor="@color/black"
@@ -89,7 +90,7 @@
             android:id="@+id/heart4"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/light_heart"/>
+            android:src="@drawable/dark_heart"/>
 
         <Space
             android:layout_width="5dp"
@@ -100,7 +101,7 @@
             android:id="@+id/heart5"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/light_heart"/>
+            android:src="@drawable/dark_heart"/>
     </LinearLayout>
 
     <Space
@@ -136,7 +137,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="text"
-        android:text="Lisa"
+        android:hint="First name here..."
         android:layout_marginLeft="90dp"
         android:layout_marginRight="90dp"
         android:textSize="15sp"
@@ -157,7 +158,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="text"
-        android:text="Mohiar"
+        android:hint="Last name here..."
         android:layout_marginLeft="90dp"
         android:layout_marginRight="90dp"
         android:textSize="15sp"
@@ -178,7 +179,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="text"
-        android:text="514-654-1234"
+        android:hint="Phone number here..."
         android:layout_marginLeft="90dp"
         android:layout_marginRight="90dp"
         android:textSize="15sp"
