--- a/FinalProject/FinalProject/app/src/main/res/layout/activity_home.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/activity_home.xml
@@ -116,7 +116,8 @@
             android:src="@drawable/minus"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_gravity="center_vertical">
+            android:layout_gravity="center_vertical"
+            android:clickable="true">
         </de.hdodenhof.circleimageview.CircleImageView>
 
         <Space
@@ -128,7 +129,7 @@
             android:id="@+id/passengers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2"
+            android:text="0"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -144,7 +145,8 @@
             android:src="@drawable/plus"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:layout_gravity="center_vertical">
+            android:layout_gravity="center_vertical"
+            android:clickable="true">
         </de.hdodenhof.circleimageview.CircleImageView>
     </LinearLayout>
 
