--- a/FinalProject/FinalProject/app/src/main/res/layout/activity_main.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,6 @@
     android:orientation="vertical">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/logo"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/dinologo"
@@ -17,7 +16,6 @@
     </de.hdodenhof.circleimageview.CircleImageView>
 
     <TextView
-        android:id="@+id/ldRides"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="L&amp;D Rides"
@@ -29,7 +27,6 @@
     </Space>
 
     <TextView
-        android:id="@+id/mainInstructions1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign In"
@@ -39,7 +36,6 @@
         android:layout_marginLeft="35dp"/>
 
     <TextView
-        android:id="@+id/mainInstructions2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Hi there! Login to catch a ride."
@@ -47,7 +43,6 @@
         android:layout_marginTop="25dp"/>
 
     <TextView
-        android:id="@+id/mainInstructions3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Email"
@@ -57,7 +52,7 @@
         android:textStyle="bold"/>
 
     <EditText
-        android:id="@+id/emailInput"
+        android:id="@+id/SI_emailInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -69,7 +64,6 @@
         android:textSize="15sp"/>
 
     <TextView
-        android:id="@+id/mainInstructions4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Password"
@@ -79,7 +73,7 @@
         android:textStyle="bold"/>
 
     <EditText
-        android:id="@+id/passwordInput"
+        android:id="@+id/SI_passwordInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -91,7 +85,7 @@
         android:textSize="15sp"/>
 
     <Button
-        android:id="@+id/signInB"
+        android:id="@+id/SI_signInB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="35dp"
@@ -102,7 +96,7 @@
         android:text="Sign In"/>
 
     <Button
-        android:id="@+id/signUpB"
+        android:id="@+id/SI_signUpB"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
