--- a/FinalProject/FinalProject/app/src/main/res/layout/activity_sign_up.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/activity_sign_up.xml
@@ -13,7 +13,6 @@
     </Space>
 
     <TextView
-        android:id="@+id/mainInstructions1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign Up"
@@ -23,7 +22,6 @@
         android:layout_marginLeft="35dp"/>
 
     <TextView
-        android:id="@+id/mainInstructions2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Email"
@@ -45,7 +43,6 @@
         android:textSize="15sp"/>
 
     <TextView
-        android:id="@+id/mainInstructions3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Password"
@@ -77,7 +74,7 @@
             android:id="@+id/checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
+            android:layout_marginLeft="15dp"
             android:text="I agree to the ">
         </CheckBox>
 
@@ -124,7 +121,6 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/mainInstructions5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Have an account? "
@@ -139,6 +135,7 @@
             android:textColor="#ff5c6c"
             android:textStyle="bold"
             android:textSize="15dp"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:clickable="true"/>
     </LinearLayout>
 </LinearLayout>
