--- a/FinalProject/FinalProject/app/src/main/res/layout/row_item.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/row_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="135dp"
     android:orientation="vertical">
 
     <Space
@@ -29,7 +29,7 @@
             android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/date"
+            android:id="@+id/dateTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2020-10-23"
@@ -50,7 +50,7 @@
             android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/driver"
+            android:id="@+id/driverTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Deema Mohiar"
@@ -71,7 +71,7 @@
             android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/duration"
+            android:id="@+id/durationTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="35 minutes"
@@ -92,7 +92,7 @@
             android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/cost"
+            android:id="@+id/costTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="30$"
