--- a/FinalProject/FinalProject/app/src/main/res/layout/activity_home.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Home"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/homeParentLayout">
 
     <TextView
         android:id="@+id/welcome"
@@ -129,7 +130,7 @@
             android:id="@+id/passengers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0"
+            android:text="1"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:textStyle="bold"
