--- a/FinalProject/FinalProject/app/src/main/res/layout/activity_specific_ride.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/activity_specific_ride.xml
@@ -16,7 +16,7 @@
         android:textColor="@color/black" />
 
     <TextView
-        android:id="@+id/startPoint"
+        android:id="@+id/SR_startPoint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="From: Fairview Shopping Center"
@@ -34,7 +34,7 @@
     </ImageView>
 
     <TextView
-        android:id="@+id/destination"
+        android:id="@+id/SR_endPoint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="To: Mr. Puffs"
@@ -53,11 +53,11 @@
         android:layout_marginTop="20dp"/>
 
     <EditText
-        android:id="@+id/waitTime"
+        android:id="@+id/SR_waitTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="none"
         android:text="7 minutes"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -75,11 +75,11 @@
         android:layout_marginTop="20dp"/>
 
     <EditText
-        android:id="@+id/timeOfArrival"
+        android:id="@+id/SR_timeOfArrival"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="none"
         android:text="10:45 AM"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -97,11 +97,11 @@
         android:layout_marginTop="20dp"/>
 
     <EditText
-        android:id="@+id/tripRate"
+        android:id="@+id/SR_tripRate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="none"
         android:text="14.55$"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -110,7 +110,7 @@
         android:editable="false"/>
 
     <Button
-        android:id="@+id/checkoutB"
+        android:id="@+id/SR_checkoutB"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -120,7 +120,7 @@
         android:layout_marginTop="20dp"/>
 
     <Button
-        android:id="@+id/cancelB"
+        android:id="@+id/SR_cancelB"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
