--- a/FinalProject/FinalProject/app/src/main/res/layout/home_child_view.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/home_child_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="100dp"
     android:orientation="horizontal">
 
     <LinearLayout
@@ -29,7 +29,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/address1"
+            android:id="@+id/pastPickupTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Vanier College"
@@ -38,10 +38,10 @@
             android:layout_marginLeft="30dp"/>
 
         <TextView
-            android:id="@+id/addressDetails"
+            android:id="@+id/pastDestinationTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="821, av. Sainte-Croix, Montreal, H4X H3E"
+            android:text="Home"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="30dp"/>
 
