--- a/FinalProject/FinalProject/app/src/main/res/layout/activity_new_password.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/activity_new_password.xml
@@ -4,8 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".NewPassword"
     android:orientation="vertical">
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="80dp">
+    </Space>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="100dp"
@@ -15,21 +20,11 @@
         android:layout_marginTop="20dp">
     </de.hdodenhof.circleimageview.CircleImageView>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="L&amp;D Rides"
-        android:textAlignment="center"/>
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="25dp">
-    </Space>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sign In"
+        android:text="New Password"
         android:textSize="25sp"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -38,26 +33,26 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hi there! Login to catch a ride."
+        android:text="Please enter a new password."
         android:layout_marginLeft="35dp"
         android:layout_marginTop="25dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Email"
+        android:text="New Password"
         android:layout_marginLeft="35dp"
         android:layout_marginTop="20dp"
         android:textColor="#ff5c6c"
         android:textStyle="bold"/>
 
     <EditText
-        android:id="@+id/SI_emailInput"
+        android:id="@+id/newPasswordInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="example@email.com"
+        android:inputType="textPassword"
+        android:hint="Enter new password here..."
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
         android:layout_marginTop="15dp"
@@ -66,26 +61,26 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Password"
+        android:text="Confirm New Password"
         android:layout_marginLeft="35dp"
         android:layout_marginTop="20dp"
         android:textColor="#ff5c6c"
         android:textStyle="bold"/>
 
     <EditText
-        android:id="@+id/SI_passwordInput"
+        android:id="@+id/confirmNewPassInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPassword"
-        android:hint="Enter password here..."
+        android:hint="Re-enter new password here..."
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
         android:layout_marginTop="15dp"
         android:textSize="15sp"/>
 
     <Button
-        android:id="@+id/SI_signInB"
+        android:id="@+id/resetPasswordB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="35dp"
@@ -93,30 +88,19 @@
         android:layout_marginTop="35dp"
         android:backgroundTint="#ff5c6c"
         android:textColor="@color/white"
-        android:text="Sign In"/>
+        android:text="Reset Password"/>
 
     <TextView
-        android:id="@+id/forgotPasswordB"
+        android:id="@+id/np_signInB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forgot password?"
+        android:text="Back to Sign In"
         android:textColor="#ff5c6c"
         android:textStyle="bold"
-        android:textSize="12dp"
+        android:textSize="15dp"
         android:layout_gravity="right"
         android:layout_marginRight="35dp"
         android:layout_marginTop="10dp"
         android:clickable="true"/>
-
-    <Button
-        android:id="@+id/SI_signUpB"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginRight="35dp"
-        android:layout_marginTop="25dp"
-        android:backgroundTint="@color/white"
-        android:textColor="#ff5c6c"
-        android:text="Sign Up"/>
 
 </LinearLayout>
