Sixth part is done

--- a/FinalProject/FinalProject/app/src/main/res/layout/activity_past_rides.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/activity_past_rides.xml
@@ -28,7 +28,7 @@
     </Space>
     
     <Button
-        android:id="@+id/homeB"
+        android:id="@+id/pr_homeB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
