--- a/FinalProject/FinalProject/app/src/main/res/layout/home_driver_child_view.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/home_driver_child_view.xml
@@ -1,78 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="240dp"
+    android:orientation="vertical"
+    android:layout_margin="10dp">
 
-    <TextView
-        android:id="@+id/nameTV"
-        android:layout_width="242dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="1dp"
-        android:text="TextView"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/pickupTV"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/pickupTV"
-        android:layout_width="213dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginBottom="30dp"
-        android:text="TextView"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/durationTV"
-        app:layout_constraintStart_toStartOf="@+id/nameTV"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="User name: "
+            android:textColor="@color/black" />
 
-    <TextView
-        android:id="@+id/durationTV"
-        android:layout_width="0dp"
-        android:layout_height="29dp"
-        android:text="TextView"
-        android:textColor="@color/black"
-        app:layout_constraintBaseline_toBaselineOf="@+id/costTV"
-        app:layout_constraintEnd_toStartOf="@+id/costTV"
-        app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/nameTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:gravity="right"
+            android:layout_marginRight="170dp"/>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/costTV"
-        android:layout_width="0dp"
-        android:layout_height="29dp"
-        android:layout_marginEnd="1dp"
-        android:text="TextView"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/durationTV"
-        app:layout_constraintTop_toTopOf="parent" />
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp">
+    </Space>
 
-    <TextView
-        android:id="@+id/destinationTV"
-        android:layout_width="0dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginBottom="29dp"
-        android:text="TextView"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/durationTV"
-        app:layout_constraintEnd_toEndOf="@+id/costTV"
-        app:layout_constraintStart_toEndOf="@+id/durationTV"
-        app:layout_constraintTop_toTopOf="@+id/nameTV" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pickup location: "
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/pickupTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:gravity="right"
+            android:layout_marginRight="170dp"/>
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp">
+    </Space>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Destination: "
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/destinationTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:gravity="right"
+            android:layout_marginRight="170dp"/>
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp">
+    </Space>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Duration: "
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/durationTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:gravity="right"
+            android:layout_marginRight="170dp"/>
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp">
+    </Space>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cost: "
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/costTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:gravity="right"
+            android:layout_marginRight="170dp"/>
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp">
+    </Space>
 
     <Button
         android:id="@+id/acceptB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="121dp"
+        android:backgroundTint="#ff5c6c"
+        android:layout_gravity="center_horizontal"
         android:text="Accept Ride"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/durationTV" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:textColor="@color/white" />
+</LinearLayout>
