--- a/FinalProject/FinalProject/app/src/main/res/layout/activity_checkout.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/activity_checkout.xml
@@ -192,8 +192,9 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="number"
             android:hint="Exp Date"
+            android:maxLength="5"
             android:layout_marginRight="40dp"
             android:layout_marginTop="10dp"
             android:textSize="13sp"
