--- a/FinalProject/FinalProject/app/src/main/res/layout/activity_edit_profile.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/activity_edit_profile.xml
@@ -185,28 +185,14 @@
         android:textSize="15sp"
         android:textAlignment="center"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/saveB"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="35dp">
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="#ff5c6c"
+        android:text="Save Changes"
+        android:textColor="@color/white" />
 
-        <Button
-            android:id="@+id/saveB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
-            android:backgroundTint="#ff5c6c"
-            android:textColor="@color/white"
-            android:text="Save Changes"/>
-
-        <Button
-            android:id="@+id/homeB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
-            android:backgroundTint="#ff5c6c"
-            android:textColor="@color/white"
-            android:text="Back to Home"/>
-    </LinearLayout>
 </LinearLayout>
