--- a/FinalProject/FinalProject/app/src/main/res/layout/activity_main.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/activity_main.xml
@@ -84,16 +84,35 @@
         android:layout_marginTop="15dp"
         android:textSize="15sp"/>
 
-    <Button
-        android:id="@+id/SI_signInB"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginTop="35dp"
-        android:backgroundTint="#ff5c6c"
-        android:textColor="@color/white"
-        android:text="Sign In"/>
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/SI_signInClientB"
+            android:layout_width="129dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="35dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginRight="35dp"
+            android:backgroundTint="#ff5c6c"
+            android:text="Sign In (User)"
+            android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/SI_signInDriverB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="35dp"
+            android:layout_marginTop="25dp"
+            android:backgroundTint="#ff5c6c"
+            android:textColor="@color/white"
+            android:text="Sign In (Driver)"/>
+    </LinearLayout>
+
+
 
     <TextView
         android:id="@+id/forgotPasswordB"
