--- a/FinalProject/FinalProject/app/src/main/res/layout/row_item.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/row_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="135dp"
+    android:layout_height="210dp"
     android:orientation="vertical">
 
     <Space
@@ -103,4 +103,14 @@
         android:layout_width="match_parent"
         android:layout_height="10dp">
     </Space>
+
+    <Button
+        android:id="@+id/viewConfirmationB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:backgroundTint="#ff5c6c"
+        android:textColor="@color/white"
+        android:text="View Confirmation"
+        android:layout_marginTop="10dp"/>
 </LinearLayout>
