--- a/FinalProject/FinalProject/app/src/main/res/layout/activity_forgot_password.xml
+++ b/FinalProject/FinalProject/app/src/main/res/layout/activity_forgot_password.xml
@@ -61,7 +61,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Keyword"
+        android:text="Where were you born?"
         android:layout_marginLeft="35dp"
         android:layout_marginTop="20dp"
         android:textColor="#ff5c6c"
